--- a/index.html
+++ b/index.html
@@ -215,6 +215,30 @@ img{
  max-height:100vh;
  width:auto;
 }
+ /* تعزيز الإضاءة للنص */
+.glow-text{
+ color:#fef3c7;
+ text-shadow:
+ 0 0 6px rgba(255,220,150,.8),
+ 0 0 12px rgba(255,200,100,.6),
+ 0 0 18px rgba(255,180,50,.4);
+}
+
+/* تحسين عرض الصورة على كل الشاشات */
+.viewer img{
+ filter: brightness(1.15) contrast(1.15) saturate(1.25);
+}
+
+/* تحسين في الوضع الفاتح */
+body.light .viewer img{
+ filter: brightness(1.05) contrast(1.1) saturate(1.15);
+}
+ @media (max-device-width:480px){
+ .viewer img{
+  filter: brightness(1.2) contrast(1.2) saturate(1.3);
+ }
+}
+ 
 </style>
 </head>
 
@@ -281,9 +305,9 @@ background:#ef4444;color:white;font-size:13px;margin-right:6px">
 <div class="search">
  <input id="search" placeholder="رقم الصفحة">
 </div>
-
-<div class="ayah-box" id="ayah"></div>
-
+ 
+<div class="ayah-box glow-text" id="ayah"></div>
+ 
 <div class="viewer" id="viewer">
  <img id="img">
 </div>
