--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ if ("serviceWorker" in navigator) {
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>القرآن الكريم — حفص</title>
-
 <style>
 body{
  margin:0;
@@ -68,15 +67,20 @@ header{
 .viewer{
  display:flex;
  justify-content:center;
- padding:8px;
+ padding:12px;
  max-height:70vh;
+ background:#fff; /* حل مشكلة الشاشات الباهتة */
+ border-radius:18px;
 }
 .viewer.fit img{width:100%;}
+
+/* الصورة */
 img{
  max-width:100%;
  border-radius:14px;
  background:#fff;
  transition:.4s;
+ filter:none; /* إزالة الفلاتر */
 }
 
 /* SIDE ARROWS */
@@ -162,7 +166,8 @@ img{
  display:none;
  font-size:13px;
 }
-  /* إضاءة النص */
+
+/* إضاءة النص (نسخة احترافية لكل الشاشات) */
 .ayah-box{
  animation:textGlow 6s infinite alternate;
 }
@@ -172,11 +177,26 @@ img{
  animation:frameGlow 12s infinite alternate;
 }
 
-/* تأثير النص */
+/* تأثير النص – حقيقي */
 @keyframes textGlow{
- 0%{text-shadow:0 0 6px #ffd700}
- 50%{text-shadow:0 0 10px #00ffff}
- 100%{text-shadow:0 0 6px #ffd700}
+ 0%{
+  background:linear-gradient(to right,#fff7cc,#fff,#ffe9a6);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  filter:drop-shadow(0 0 4px #ffd700);
+ }
+ 50%{
+  background:linear-gradient(to right,#e0ffff,#fff,#ccffff);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  filter:drop-shadow(0 0 6px #00ffff);
+ }
+ 100%{
+  background:linear-gradient(to right,#fff7cc,#fff,#ffe9a6);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  filter:drop-shadow(0 0 4px #ffd700);
+ }
 }
 
 /* تأثير الإطار */
@@ -185,23 +205,12 @@ img{
  50%{filter:hue-rotate(40deg)}
  100%{filter:hue-rotate(0deg)}
 }
-  
-.full img{
- animation:frameGlow 8s infinite alternate;
-}
 
-.full .ayah-box{
- animation:textGlow 4s infinite alternate;
-}
-  
-/* FULL */
-.full header,.full .search,.full .ayah-box,.full .nav{display:none}
-.full .viewer{max-height:100vh}
-  .full .side,
-.full .nav,
+/* وضع ملء الشاشة */
 .full header,
 .full .search,
-.full .ayah-box{
+.full .ayah-box,
+.full .nav{
  display:none !important;
 }
 
@@ -209,37 +218,42 @@ img{
  max-height:100vh;
  width:100vw;
  padding:0;
+ background:#000;
 }
 
 .full img{
  max-height:100vh;
  width:auto;
-}
- /* تعزيز الإضاءة للنص */
-.glow-text{
- color:#fef3c7;
- text-shadow:
- 0 0 6px rgba(255,220,150,.8),
- 0 0 12px rgba(255,200,100,.6),
- 0 0 18px rgba(255,180,50,.4);
+ animation:frameGlow 8s infinite alternate;
 }
 
-/* تحسين عرض الصورة على كل الشاشات */
-.viewer img{
- filter: brightness(1.15) contrast(1.15) saturate(1.25);
+/* تحسين الوضع الفاتح */
+body.light .viewer{
+ background:#fff;
+}
+body.light img{
+ filter:none;
 }
 
-/* تحسين في الوضع الفاتح */
-body.light .viewer img{
- filter: brightness(1.05) contrast(1.1) saturate(1.15);
-}
- @media (max-device-width:480px){
- .viewer img{
-  filter: brightness(1.2) contrast(1.2) saturate(1.3);
+/* دعم الأجهزة الضعيفة */
+@media (max-device-width:480px){
+ .ayah-box{
+  filter:drop-shadow(0 0 4px #fff)
+         drop-shadow(0 0 8px #ffd700);
  }
 }
- 
+
+/* نسخة احتياط للنص */
+.glow-text{
+ color:#fff;
+ background:linear-gradient(to right,#fff7cc,#fff,#ffe9a6);
+ -webkit-background-clip:text;
+ -webkit-text-fill-color:transparent;
+ filter: drop-shadow(0 0 4px #ffd700)
+         drop-shadow(0 0 8px #ffecb5);
+}
 </style>
+ 
 </head>
 
 <body>
