--- a/index.html
+++ b/index.html
@@ -252,6 +252,32 @@ body.light img{
  filter: drop-shadow(0 0 4px #ffd700)
          drop-shadow(0 0 8px #ffecb5);
 }
+ /* تعزيز القراءة للأجهزة الضعيفة */
+@media (max-device-width:480px){
+
+ .viewer img{
+  filter:
+   brightness(1.35)
+   contrast(1.45)
+   saturate(1.25)
+   drop-shadow(0 0 1px #fff)
+   drop-shadow(0 0 2px #fff)
+   drop-shadow(0 0 4px #ffd700);
+ }
+
+}
+
+/* وضع تعزيز يدوي لو حبيت */
+.enhance img{
+ filter:
+  brightness(1.4)
+  contrast(1.5)
+  saturate(1.3)
+  drop-shadow(0 0 1px #fff)
+  drop-shadow(0 0 3px #ffd700)
+  drop-shadow(0 0 6px #ffea8a);
+}
+ 
 </style>
  
 </head>
